hphp/hack/test/typecheck/async_coroutine2.php.exp
File "async_coroutine2.php", line 3, characters 1-47:
Coroutine functions may not be async (Parsing[1002])
