hphp/hack/test/typecheck/async_coroutine2.php
<?hh // strict

async coroutine function foo(): Awaitable<void> {
}
